--- a/Study/sec_7/63_Discrete_derivative.ipynb
+++ b/Study/sec_7/63_Discrete_derivative.ipynb
@@ -46,6 +46,7 @@
     "df = np.diff(fx)/dx\n",
     "\n",
     "plt.plot(x, fx, c='m', label=f'f(x)')\n",
+    "# df의 값이 하나 작으므로, x array에서 하나를 빼 준다.\n",
     "plt.plot(x[:-1], df, c='r', label=f'df/dx')\n",
     "\n",
     "\n",
