--- a/Study/sec_7/62_summation_product.ipynb
+++ b/Study/sec_7/62_summation_product.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "#### summation\n",
-    "## $$\\displaystyle\\sum_{i=1}^{n} a_n = a_1 + a_2 + \\dots + a_n$$\n",
+    "## $$\\sum_{i=1}^{k} a_n = a_1 + a_2 + \\dots + a_n$$\n",
     "#### production\n",
     "## $$\\displaystyle\\prod_{i=1}^{n} a_n = a_1 \\times a_2 \\times \\dots \\times a_n$$\n",
     "#### cumulative summation\n",
