--- a/Study/sec_7/73_log_exp.ipynb
+++ b/Study/sec_7/73_log_exp.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-01T12:01:45.140427Z",
-     "start_time": "2024-10-01T12:01:44.763400Z"
+     "end_time": "2024-10-02T12:24:52.185119Z",
+     "start_time": "2024-10-02T12:24:51.611899Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T12:04:28.816768Z",
-     "start_time": "2024-10-01T12:04:28.686360Z"
+     "end_time": "2024-10-02T12:24:52.442029Z",
+     "start_time": "2024-10-02T12:24:52.206073Z"
     }
    },
    "cell_type": "code",
@@ -54,9 +54,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kimna\\AppData\\Local\\Temp\\ipykernel_6184\\1904224066.py:8: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\kimna\\AppData\\Local\\Temp\\ipykernel_7724\\1904224066.py:8: RuntimeWarning: divide by zero encountered in log\n",
       "  plt.plot(x, np.log(x))\n",
-      "C:\\Users\\kimna\\AppData\\Local\\Temp\\ipykernel_6184\\1904224066.py:8: RuntimeWarning: invalid value encountered in log\n",
+      "C:\\Users\\kimna\\AppData\\Local\\Temp\\ipykernel_7724\\1904224066.py:8: RuntimeWarning: invalid value encountered in log\n",
       "  plt.plot(x, np.log(x))\n"
      ]
     },
@@ -71,7 +71,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -87,8 +87,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T12:14:00.728351Z",
-     "start_time": "2024-10-01T12:14:00.660730Z"
+     "end_time": "2024-10-02T12:24:52.611141Z",
+     "start_time": "2024-10-02T12:24:52.534955Z"
     }
    },
    "cell_type": "code",
@@ -119,15 +119,83 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 3
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "### Exercise"
+   ],
+   "id": "318606e71c3ed476"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "─────────────────── Exercise ─────────────────────",
+   "id": "a289f8d472be4465"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "",
-   "id": "2d5c735602be2ec"
+   "id": "fe472fb6eced0004"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "c66e8af219da4e8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### Cumulative sum\n",
+    "\n",
+    "$$y_k = \\sum_{i=1}^k a_i \\quad\\left{\n",
+    "\\begin{array}{l}\n",
+    "y_1 = a_1 \\\n",
+    "y_2 = a_1 + a_2 \\\n",
+    "y_3 = a_1 + a_2 + a_3 \\\n",
+    "\\cdots \\\n",
+    "y_k = a_1 + a_2 + \\cdots + a_k\n",
+    "\\end{array}\n",
+    "\\right.$\n"
+   ],
+   "id": "4c525806e1d4ca30"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## $$y_k = \\sum_{i=1}^k a_i \\quad \\begin{cases} y_1 = a_1 \\\\ y_2 = a_1 + a_2 \\\\ y_3 = a_1 + a_2 + a_3 \\\\ \\vdots \\\\ y_k = a_1 + a_2 + \\cdots + a_k \\end{cases}$$",
+   "id": "7e9302b88eaf11d6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "cec3c73193b4139f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "b14f0fa2c06efb89"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T12:24:52.646467Z",
+     "start_time": "2024-10-02T12:24:52.644039Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "d1baef00ad8ee10d",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
