--- a/Study/sec_7/81_max_min_value.ipynb
+++ b/Study/sec_7/81_max_min_value.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-02T14:22:26.037006Z",
-     "start_time": "2024-10-02T14:22:25.420478Z"
+     "end_time": "2024-10-03T11:49:04.746120Z",
+     "start_time": "2024-10-03T11:49:04.743107Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T14:31:44.265585Z",
-     "start_time": "2024-10-02T14:31:44.207963Z"
+     "end_time": "2024-10-03T11:49:04.859267Z",
+     "start_time": "2024-10-03T11:49:04.759159Z"
     }
    },
    "cell_type": "code",
@@ -52,15 +52,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 30
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T11:49:04.894369Z",
+     "start_time": "2024-10-03T11:49:04.891319Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "8632cded59e036c9"
+   "id": "8632cded59e036c9",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
