--- a/Study/test.ipynb
+++ b/Study/test.ipynb
@@ -2,35 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-09-30T02:43:46.517943Z",
      "start_time": "2024-09-30T02:43:46.513439Z"
-    }
+    },
+    "collapsed": true
    },
-   "source": [
-    "import numpy as np\n",
-    "x = [1, -1]\n",
-    "m = [0.5, 0.25]\n",
-    "b = [5, 10]\n",
-    "\n",
-    "for i in range(len(x)):\n",
-    "    print(f\"{i=}\")\n",
-    "\n",
-    "    print(f\"x[{i}]={x[i]}\")\n",
-    "    print(f\"m[{i}]={m[i]}\")\n",
-    "    print(f\"b[{i}]={b[i]}\")\n",
-    "    y = m[i]* np.array(x) + b[i]\n",
-    "    print(f\"{np.array(x)=}\")\n",
-    "    print(f\"{y=}\")\n",
-    "    \n",
-    "    y2 = m[i]* x[i] + b[i]\n",
-    "    print(f\"{x=}\")\n",
-    "    print(f\"{y2=}\")\n",
-    "    "
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -55,34 +35,54 @@
      ]
     }
    ],
-   "execution_count": 17
+   "source": [
+    "import numpy as np\n",
+    "x = [1, -1]\n",
+    "m = [0.5, 0.25]\n",
+    "b = [5, 10]\n",
+    "\n",
+    "for i in range(len(x)):\n",
+    "    print(f\"{i=}\")\n",
+    "\n",
+    "    print(f\"x[{i}]={x[i]}\")\n",
+    "    print(f\"m[{i}]={m[i]}\")\n",
+    "    print(f\"b[{i}]={b[i]}\")\n",
+    "    y = m[i]* np.array(x) + b[i]\n",
+    "    print(f\"{np.array(x)=}\")\n",
+    "    print(f\"{y=}\")\n",
+    "    \n",
+    "    y2 = m[i]* x[i] + b[i]\n",
+    "    print(f\"{x=}\")\n",
+    "    print(f\"{y2=}\")\n",
+    "    "
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "3340f47354ee4b95"
+   "id": "3340f47354ee4b95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learning",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
